# serializer version: 1
# name: test_create[mongo]
  dict({
    '_id': 'test_analysis',
    'files': list([
    ]),
    'index': dict({
      'id': 'test_index',
      'version': 11,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'ready': False,
    'reference': dict({
      'id': 'test_ref',
    }),
    'results': None,
    'sample': dict({
      'id': 'test_sample',
    }),
    'space': dict({
      'id': 0,
    }),
    'subtractions': list([
      'subtraction_1',
      'subtraction_2',
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'workflow': 'nuvs',
  })
# ---
# name: test_create[obj]
  dict({
    'files': list([
    ]),
    'id': 'test_analysis',
    'index': dict({
      'id': 'test_index',
      'version': 11,
    }),
    'job': dict({
      'archived': False,
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': <JobState.WAITING: 'waiting'>,
      'user': dict({
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'nuvs',
    }),
    'ready': False,
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 'test_ref',
      'name': 'Test Reference',
    }),
    'results': None,
    'sample': dict({
      'id': 'test_sample',
    }),
    'subtractions': list([
      dict({
        'id': 'subtraction_1',
        'name': 'Subtraction 1',
      }),
      dict({
        'id': 'subtraction_2',
        'name': 'Subtraction 2',
      }),
    ]),
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'nuvs',
  })
# ---
# name: test_create_analysis_id[mongo]
  dict({
    '_id': 'fb085f7f',
    'files': list([
    ]),
    'index': dict({
      'id': 'test_index',
      'version': 11,
    }),
    'job': dict({
      'id': '7cf872dc',
    }),
    'ready': False,
    'reference': dict({
      'id': 'test_ref',
    }),
    'results': None,
    'sample': dict({
      'id': 'test_sample',
    }),
    'space': dict({
      'id': 0,
    }),
    'subtractions': list([
      'subtraction_1',
      'subtraction_2',
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'workflow': 'nuvs',
  })
# ---
# name: test_create_analysis_id[obj]
  dict({
    'files': list([
    ]),
    'id': 'fb085f7f',
    'index': dict({
      'id': 'test_index',
      'version': 11,
    }),
    'job': dict({
      'archived': False,
      'id': '7cf872dc',
      'progress': 0,
      'stage': None,
      'state': <JobState.WAITING: 'waiting'>,
      'user': dict({
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'nuvs',
    }),
    'ready': False,
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 'test_ref',
      'name': 'Test Reference',
    }),
    'results': None,
    'sample': dict({
      'id': 'test_sample',
    }),
    'subtractions': list([
      dict({
        'id': 'subtraction_1',
        'name': 'Subtraction 1',
      }),
      dict({
        'id': 'subtraction_2',
        'name': 'Subtraction 2',
      }),
    ]),
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'nuvs',
  })
# ---
# name: test_upload_file
  dict({
    'analysis': 'foobar',
    'description': None,
    'format': 'fasta',
    'id': 1,
    'name': 'reference.fa',
    'name_on_disk': '1-reference.fa',
    'size': 20466,
  })
# ---
